Fixed mobile browser logo distortion.

--- a/styles/main.css
+++ b/styles/main.css
@@ -522,7 +522,7 @@ p.featured {
 /* line 105, sass/screen.sass */
 #branding a img {
   padding: 12px 0;
-  width: 75px;
+  width: 66.92px;
   height: 25px;
   margin: 0 auto;
 }
