--- a/styles/sass/screen.sass
+++ b/styles/sass/screen.sass
@@ -104,7 +104,7 @@ p
 		text-align: center
 		img
 			padding: 12px 0
-			width: 75px
+			width: 66.92px
 			height: 25px
 			margin: 0 auto
 
